# TAIL.ai

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  DEV-SETUP.md  LICENSE  README.md  docker-compose.yml  package-lock.json  zoomin.html
.github/: labeler.yml
.github/workflows/: greetings.yml  nodejs-ci.yml
client/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  index.html  jsconfig.json  package.json  tailwind.config.js  vite.config.js
client/public/: 3dCityNav.spline  chips.spline
client/src/: App.jsx  index.css
client/src/components/: AgentMarketplace.jsx  ChatBotButton.jsx  ExecutionPanel.jsx  Footer.jsx  Logo.jsx  MiniMap.jsx  MobileSection.jsx  ModeToggle.jsx  ThemeProvider.jsx  UnicornScene.jsx  WorkflowNode.jsx
client/src/config/: nav.js
client/src/context/: AuthContext.jsx
client/src/lib/: axios.js  imageClassification.js
client/src/pages/: AboutPage.jsx  AgentCatalog.jsx  ContactUs.jsx  Dashboard.jsx  Home.jsx  Login.jsx  Playground.jsx  (+6 more)
ml_service/: Dockerfile  README.md  pyproject.toml
ml_service/agents/: __init__.py  example_agent.py
ml_service/app/: main.py
scripts/: start-server-demo.ps1  stop-server-demo.ps1
server/: .dockerignore  .env  .env.example  .gitignore  Dockerfile  config.yaml  package.json  service-account-key.json
server/public/: index.html
server/scripts/: seedCitizen.js  seedFive.js  seedInfraReports.js  seedReports.js  seedWorker.js
server/src/: app.js  constants.js  index.js  seed.js
server/tools/: classifier_server.mjs  dev.token.txt  get-dev-token.js  make-dev-token.js  test-scan.js
(+55 files in other folders)
